<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>

    <string name="action_settings">Settings</string>
    <string name="add_friend">添加好友在这里哦</string>
    <string name="nearby">查看附近的人</string>
    <string name="title_activity_simple_guide_view">SimpleGuideViewActivity</string>
    <string name="title_activity_muti_guide_view">MutiGuideViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="about_text" tools:ignore="TypographyDashes">This is a sample of android-gif-drawable Library:
        https://github.com/koral--/android-gif-drawable\nUsed icons are public domain or licensed under CC, GFDL.</string>
    <string name="compound_text">This is a TextView with animated compound drawables</string>
    <string name="gif_texture_view_stub_api_level">GifTextureView is available in API level 14+</string>
    <string name="gif_texture_view_stub_acceleration">GifTextureView requires hardware acceleration</string>
    <string name="gif_texture_view_loading_failed">Could not load GIF: %s. Tap to try again.</string>
    <string name="reset_animation">Reset animation</string>
    <string name="animation_running">Animation running</string>
    <string name="animation_stopped">Animation stopped</string>
    <string name="toggle_label">Click button below to toggle animation</string>
    <string name="animation_loop_completed" tools:ignore="PluralsCandidate">Animation loop #%1$d completed</string>
    <string name="gles2_not_supported">GifTexImage2D requires OpenGL ES 2 or newer</string>
    <string name="animated_selector_description">Press button to change drawable state</string>
    <string name="java_selector">java selector</string>
    <string name="xml_selector">XML selector</string>


    <string name="bottom_tab_know">资讯</string>
    <string name="bottom_tab_wantknow">发现</string>
    <string name="bottom_tab_my">我的</string>

    <string name="app_name">猿媛</string>

    <string name="no_network">当前无网络连接</string>
    <string name="bye_burger_bottom_behavior">xyz.zimuju.gankio.behavior.byeburgernavigationview.ByeBurgerBottomBehavior</string>
    <string name="bye_burger_title_behavior">xyz.zimuju.gankio.behavior.byeburgernavigationview.ByeBurgerTitleBehavior</string>
    <string name="no_permisstion_write">没有写入磁盘权限</string>


    <string name="app_desc">在这里阅读高质量的技术干货</string>


    <string name="main_home">首页</string>
    <string name="main_mine">我的</string>
    <string name="main_reading">闲读</string>
    <string name="main_only_wifi">仅WIFI加载图片</string>

    <string name="mine_login">用户登录</string>
    <string name="mine_no_login">此功能需要登录</string>
    <string name="mine_click_login">点我登录</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_cache_clear">缓存清理</string>
    <string name="mine_exit">退出登录</string>
    <string name="mine_about">关于应用</string>
    <string name="mine_share">分享</string>
    <string name="mine_feedback">意见反馈</string>

    <string name="feedback_dialog_title">您宝贵的反馈建议</string>
    <string name="feedback_input_hint">可直接到Github提Issues</string>
    <string name="feedback_input_prefill"></string>
    <string name="feedback_success">提交成功</string>
    <string name="feedback_failed">提交失败</string>

    <string name="app_share">我正在使用[干货IO]这个App,还不错哦！应用下载地址：http://android.myapp.com/myapp/detail.htm?apkName=ren.solid.ganhuoio</string>
    <string name="about_msg">
        此应用是基于gank.io提供的api实现，包括了最新干货查看、分类查看、闲读以及站内搜索，
        还可对感兴趣的信息收藏。
     </string>
    <string name="about_author">作者:_SOLID</string>
    <string name="about_github">Github:https://github.com/burgessjp</string>
    <string name="about_blog">简书主页:http://www.jianshu.com/users/6725c8e8194f</string>
    <string name="about_weibo">新浪微博ID:_SOLID(欢迎关注)</string>
    <string name="about_project">项目地址:https://github.com/burgessjp/GanHuoIO</string>
    <string name="image_transition">image_trans_name</string>
    <string name="app_download_url">http://android.myapp.com/myapp/detail.htm?apkName=ren.solid.ganhuoio</string>
    <string name="cache_clear_success">清理成功</string>
    <string name="tips_keyword_cannot_null">请输入搜索关键词</string>
    <string name="tips_no_collect">暂无收藏</string>
    <string name="about">关于</string>

    <string name="editor_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMOPQRSTUVWXYZ.@_</string>
    <string name="common_tip_back">返回</string>
    <string name="common_tip_about">关于</string>
    <string name="common_sms_name">猿媛</string>
    <string name="mine_gank">跳转Gank</string>
</resources>