<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/rl_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/common_shape_vertical_divider"
              android:orientation="vertical"
              android:showDividers="middle">

    <xyz.zimuju.common.widget.NoneScrollViewPager
        android:id="@+id/navigation_container_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"/>

    <RadioGroup
        android:id="@+id/navigation_group_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <RadioButton
            android:id="@+id/navigation_news_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/white"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_navigation_news"
            android:gravity="center"
            android:text="@string/bottom_tab_know"
            android:textColor="@drawable/selector_navigation_text"
            android:textSize="@dimen/text_size_normal"/>

        <RadioButton
            android:id="@+id/navigation_discovery_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/white"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_navigation_discovery"
            android:gravity="center"
            android:text="@string/bottom_tab_wantknow"
            android:textColor="@drawable/selector_navigation_text"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/navigation_mine_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@android:color/white"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_navigation_mine"
            android:gravity="center"
            android:text="@string/bottom_tab_my"
            android:textColor="@drawable/selector_navigation_text"
            android:textSize="12sp"/>
    </RadioGroup>
</LinearLayout>